Routing + working on about page

--- a/src/app/ui/home.module.scss
+++ b/src/app/ui/home.module.scss
@@ -1,6 +1,6 @@
 .shape {
-  height: 0;
-  width: 0;
+  height: 25px;
+  width: 25px;
   border-bottom: 30px solid black;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
