--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,33 +3,52 @@
 @tailwind utilities;
 
 body {
+  display: flex;
   * {
     min-width: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
-  display: flex;
+  b {
+    color: #0a9e6f;
+  }
   aside {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     padding: .5rem;
   }
   
   main {
     flex: 1 1 auto;
     padding: 1rem .5rem;
-    overflow-y: auto;
-    height: 100vh;
   }
 }
 
-@media (min-width: 1024px) {
-  aside {
-    flex: 0 0 320px;
+@media (min-width: 1023px) {
+  body {
+    flex-direction: row;
+    aside {
+      flex: 0 0 300px;
+      height: 100vh;
+    }
+    main {
+      overflow-y: auto;
+      height: 100vh;
+    }
   }
+  
 }
 
-@media (max-width: 1024px) {
-  aside {
-    flex: 0 0 260px;
+@media (max-width: 1023px) {
+  body {
+    flex-direction: column;
+    aside {
+      flex: 1 1 auto;
+      height: auto;
+    }
+    main {
+      overflow-y: hidden;
+      height: auto;
+    }
   }
 }
