Footer component + layout tweaks + implemented url on about icons

--- a/src/app/dashboard/dashboard.module.scss
+++ b/src/app/dashboard/dashboard.module.scss
@@ -31,8 +31,8 @@
       padding: .5rem .25rem;
       border-radius: 5px;
     }
-    &:last-child {
+    /*&:last-child {
       margin-top: auto;
-    }
+    }*/
   }
 }
