--- a/test-page/index.css
+++ b/test-page/index.css
@@ -411,7 +411,7 @@ img#profile-pic {
   left: 0;
   border-radius: 50%;
   border: 5px solid transparent;
-  border-top-color: var(--primary-color);
+  border-top-color: var(--lightbulb-color);
   width: 100%;
   height: 100%;
 }
@@ -430,7 +430,7 @@ img#profile-pic {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 46px;
 }
 
 a.no-route-small {
@@ -520,7 +520,6 @@ footer {
     display: block;
   }
   h1 {
-    text-align: end;
     font-size: 36px;
   }
 }
